bluejay-validator/tests/snapshots/executable_integration_test__error@fragment_spreads_must_not_form_cycles.graphql.snap
---
source: bluejay-validator/tests/executable_integration_test.rs
expression: formatted_errors
input_file: bluejay-validator/tests/test_data/executable/error/fragment_spreads_must_not_form_cycles.graphql
---
Error: Cycle detected in fragment `barkVolumeFragment`
    ╭─[ fragment_spreads_must_not_form_cycles.graphql:9:6 ]
    │
  9 │   ...barkVolumeFragment
    │      ─────────┬────────  
    │               ╰────────── Cycle introduced by fragment spread
    │ 
 12 │ fragment barkVolumeFragment on Dog {
    │          ─────────┬────────  
    │                   ╰────────── Affected fragment definition
────╯

Error: Cycle detected in fragment `nameFragment`
    ╭─[ fragment_spreads_must_not_form_cycles.graphql:14:6 ]
    │
  7 │ fragment nameFragment on Dog {
    │          ──────┬─────  
    │                ╰─────── Affected fragment definition
    │ 
 14 │   ...nameFragment
    │      ──────┬─────  
    │            ╰─────── Cycle introduced by fragment spread
────╯
